# hack-ai-thon-submission-spruce-street-stack

./: .gitignore  CLAUDE.md  DEMO_SCRIPT.md  PLAN.md  README.md  requirements.txt
docs/: pitch_deck_outline.md
question-engine/: .env.example  .gitignore  Ask-What-Matters.pptx  package-lock.json  pitch-deck.js  pyproject.toml  requirements.txt  run.py
question-engine/.streamlit/: config.toml
question-engine/app/: streamlit_app.py
question-engine/config/: cross_ref.yaml  taxonomy.yaml  weights.yaml
question-engine/docs/plans/: 2026-04-15-ui-redesign-design.md  2026-04-15-ui-redesign-impl.md
question-engine/src/: db.py  enrich.py  flow.py  ingest.py  llm.py  models.py  parser.py  question_engine.py  ranker.py  renderer.py  scoring.py  signals.py  taxonomy.py
question-engine/tests/: conftest.py  test_db.py  test_enrich.py  test_flow.py  test_ingest.py  test_llm.py  test_models.py  test_parser.py  test_ranker.py  test_renderer.py  test_scoring.py  test_signals.py  test_taxonomy.py
question-engine/tests/fixtures/: descriptions_tiny.csv  reviews_tiny.csv
