[project]
name = "question-engine"
version = "0.1.0"
description = "Ask What Matters — adaptive follow-up question engine for Expedia reviews"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "langdetect>=1.0.9",
    "streamlit>=1.33",
    "streamlit-mic-recorder>=0.0.8",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
